# cudllm

./: .gitignore  candidate_0.cu  candidate_1.cu  pyproject.toml  run_fsr.py
chroma_db/63227005-120d-4733-b1ea-9e3dba45ac79/: index_metadata.pickle
chroma_db/de362498-4643-4641-9ea7-66cd1c0036ba/: index_metadata.pickle
ingest/api/: best_practices.html
ingest/concepts/: cuda_guide.html  warp_primitives.html
ingest/hardware/: ampere_compat.html  ampere_tuning.html
src/: chroma.py
src/core/: __init__.py  benchmarks.py  docs_retriever.py  fsr_framework.py  hierarchical_rag.py  llm_interface.py  prompt_manager.py  vector_store.py
src/core/retrievers/: api_retriever.py  concept_retriever.py  example_retriever.py  hardware_retriever.py  pattern_retriever.py
src/execution_checker/: compilation_checker.py  functional_validator.py  performance_profiler.py
src/schemas/: knowledge.py  llm_response.py
src/weaver_agent_workflow/: __init__.py
src/weaver_agent_workflow/benchmarks/: tasks.py
src/weaver_agent_workflow/evaluation/: framework.py
src/weaver_agent_workflow/fsr/: framework.py
src/weaver_agent_workflow/llm/: interface.py
src/weaver_agent_workflow/prompt/: __init__.py
