[project]
name = "weaver-agent-workflow"
version = "0.1.0"
description = "CUDA kernel optimization framework using LLM-guided iterative search and refinement"
readme = "README.md"
authors = [
    { name = "Piyush Mittal", email = "mittalpiyush2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
cuda11 = ["cupy-cuda11x>=13.0.0"]
cuda12 = ["cupy-cuda12x>=13.0.0"]
rocm = ["cupy-rocm-5-0>=13.0.0,<13.4.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
weaver-agent-workflow = "weaver_agent_workflow:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
