[project]
name = "weaver-agent-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.107.2",
    "pydantic>=2.7.0",
    "numpy>=2.0.0",
    "dotenv>=0.9.9",
    "ruff>=0.13.0",
    "chromadb>=1.1.0",
    "bs4>=0.0.2",
    "fitz>=0.0.1.dev2",
    "pypdf>=6.0.0",
]
